@@ -21,170 +21,201 @@
  */
 package com.github._1c_syntax.bsl.languageserver.providers;
 
-import com.github._1c_syntax.bsl.languageserver.context.DocumentContext;
-import com.github._1c_syntax.bsl.languageserver.context.ServerContext;
-import com.github._1c_syntax.bsl.languageserver.context.ServerContextProvider;
-import com.github._1c_syntax.bsl.languageserver.context.symbol.SourceDefinedSymbol;
-import com.github._1c_syntax.bsl.languageserver.context.symbol.Symbol;
-import com.github._1c_syntax.bsl.languageserver.context.symbol.VariableSymbol;
-import com.github._1c_syntax.bsl.languageserver.context.symbol.variable.VariableKind;
-import com.github._1c_syntax.bsl.languageserver.configuration.Language;
-import com.github._1c_syntax.bsl.mdo.MD;
-import com.github._1c_syntax.bsl.types.MdoReference;
-import com.github._1c_syntax.bsl.types.ScriptVariant;
-import com.github._1c_syntax.utils.CaseInsensitivePattern;
+import com.github._1c_syntax.bsl.languageserver.LanguageClientHolder;
+import com.github._1c_syntax.bsl.languageserver.configuration.GlobalLanguageServerConfiguration;
+import com.github._1c_syntax.bsl.languageserver.types.index.Entry;
+import com.github._1c_syntax.bsl.languageserver.types.index.WorkspaceSymbolIndex;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.eclipse.lsp4j.Location;
+import org.eclipse.lsp4j.ProgressParams;
 import org.eclipse.lsp4j.WorkspaceSymbol;
 import org.eclipse.lsp4j.WorkspaceSymbolParams;
 import org.eclipse.lsp4j.jsonrpc.CancelChecker;
 import org.eclipse.lsp4j.jsonrpc.messages.Either;
 import org.springframework.stereotype.Component;
 
-import java.net.URI;
-import java.util.EnumSet;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.regex.Pattern;
-import java.util.regex.PatternSyntaxException;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * Провайдер для поиска символов в рабочей области.
  * <p>
- * Обрабатывает запросы {@code workspace/symbol}.
+ * Обрабатывает запросы {@code workspace/symbol}, делегируя поиск инкрементальному
+ * {@link WorkspaceSymbolIndex}: индекс хранит уже подготовленные записи символов, поэтому провайдер
+ * лишь маппит записи в {@link WorkspaceSymbol} без обхода всех документов.
+ * <p>
+ * Быстрая древесная выдача ({@link WorkspaceSymbolIndex#search(String, CancelChecker)}) отдаётся
+ * мгновенно. Если клиент поддерживает частичные результаты (прислал
+ * {@link WorkspaceSymbolParams#getPartialResultToken()}), и быстрая выдача, и нижнеранжированный
+ * «грязный» fuzzy-хвост (подстрока внутри слова и подпоследовательность вразброс,
+ * {@link WorkspaceSymbolIndex#searchFuzzyTail(String, java.util.Collection, CancelChecker)}) досылаются
+ * потоково чанками через {@code $/progress} (с проверкой отмены между чанками), а синхронный ответ
+ * возвращается ПУСТЫМ, чтобы не дублировать уже отправленные прогрессом чанки.
+ * <p>
+ * Без токена частичных результатов поведение определяется булевым флагом
+ * {@code workspaceSymbol.syncFuzzySearch}: при значении {@code true} к древесной выдаче синхронно
+ * дописывается результат блокирующего fuzzy-скана; при значении {@code false} (по умолчанию) ответом
+ * служит только древесная выдача — медленный скан НЕ запускается.
  *
  * @see <a href="https://microsoft.github.io/language-server-protocol/specifications/specification-current/#workspace_symbol">Workspace Symbols Request specification</a>
  */
-@Slf4j
 @Component
 @RequiredArgsConstructor
 public class SymbolProvider {
 
-  private final ServerContextProvider serverContextProvider;
+  /**
+   * Размер чанка символов, досылаемого одним уведомлением {@code $/progress}.
+   */
+  private static final int STREAM_BATCH_SIZE = 200;
 
-  private static final Set<VariableKind> SUPPORTED_VARIABLE_KINDS = EnumSet.of(
-    VariableKind.MODULE,
-    VariableKind.GLOBAL
-  );
+  private final WorkspaceSymbolIndex workspaceSymbolIndex;
+  private final LanguageClientHolder clientHolder;
+  private final GlobalLanguageServerConfiguration globalConfiguration;
 
   /**
-   * Выполняет поиск символов рабочей области по запросу {@code workspace/symbol} с поддержкой отмены.
+   * Выполняет поиск символов рабочей области по запросу {@code workspace/symbol} с поддержкой отмены
+   * и потоковой выдачи частичных результатов.
    * <p>
-   * Отмена проверяется на границе каждого документа: если клиент отменил запрос
-   * (например, прислав новый запрос при следующем нажатии клавиши), обход прерывается
-   * исключением {@link java.util.concurrent.CancellationException}.
+   * Сначала из {@link WorkspaceSymbolIndex#search(String, CancelChecker)} берётся быстрая древесная
+   * выдача (точное совпадение, префикс полного имени, многословное camel-hump совпадение, префикс
+   * начала слова), ранжированная по релевантности.
+   * <p>
+   * Если токен частичного результата есть (и запрос непуст, и клиент подключён), включается потоковая
+   * выдача: и быстрый набор, и fuzzy-хвост
+   * ({@link WorkspaceSymbolIndex#searchFuzzyTail(String, java.util.Collection, CancelChecker)} с быстрой
+   * выдачей в качестве exclude) досылаются {@code $/progress}-чанками по {@link #STREAM_BATCH_SIZE}
+   * через {@link #streamInBatches(Either, List, CancelChecker)}. Чтобы не пересортировывать выдачу,
+   * быстрые чанки уходят ПЕРВЫМИ (клиент дописывает их в порядке прихода). Синхронный ответ при этом
+   * ПУСТ: клиент конкатенирует прогресс-чанки, и повторная отдача того же набора в ответе привела бы к
+   * дублям. Отмена проверяется индексом периодически и между чанками; при отмене бросается
+   * {@link java.util.concurrent.CancellationException}.
+   * <p>
+   * Если токена нет (либо запрос пуст, либо клиент не подключён), потоковая выдача невозможна. Тогда
+   * поведение определяется булевым флагом {@code workspaceSymbol.syncFuzzySearch}: при {@code true}
+   * к древесной выдаче синхронно дописывается результат блокирующего fuzzy-скана; при {@code false}
+   * (по умолчанию) возвращается только древесная выдача, медленный скан не выполняется.
    *
-   * @param params        Параметры запроса {@code workspace/symbol}, в т.ч. строка запроса
-   * @param cancelChecker Проверяющий отмену запроса; вызывается на границе каждого документа
-   * @return Список найденных символов рабочей области
+   * @param params        Параметры запроса {@code workspace/symbol}, в т.ч. строка запроса и токен
+   *                      частичного результата
+   * @param cancelChecker Проверяющий отмену запроса
+   * @return Полный список при синхронном пути; ПУСТОЙ список при потоковой выдаче (символы ушли в
+   *         {@code $/progress})
    */
   public List<? extends WorkspaceSymbol> getSymbols(WorkspaceSymbolParams params, CancelChecker cancelChecker) {
     var queryString = Optional.ofNullable(params.getQuery())
       .orElse("");
 
-    var pattern = compilePattern(queryString);
+    var fast = workspaceSymbolIndex.search(queryString, cancelChecker);
 
-    // Search for symbols in all workspace contexts
-    return serverContextProvider.getAllContexts().values().stream()
-      .flatMap(serverContext -> serverContext.getDocuments().values().stream())
-      .peek(documentContext -> cancelChecker.checkCanceled())
-      .flatMap(SymbolProvider::getSymbolEntries)
-      .filter(symbolEntry -> queryString.isEmpty() || pattern.matcher(symbolEntry.symbol().getName()).find())
+    var token = params.getPartialResultToken();
+    if (token != null && !queryString.isEmpty() && clientHolder.isConnected()) {
+      // Быстрый набор уходит первым: ранг сохраняется порядком прибытия прогресс-чанков.
+      streamInBatches(token, fast, cancelChecker);
+
+      var tail = workspaceSymbolIndex.searchFuzzyTail(queryString, identitySetOf(fast), cancelChecker);
+      streamInBatches(token, tail, cancelChecker);
+
+      // Клиент прислал partialResultToken, поэтому конкатенирует чанки $/progress. Повторная отдача
+      // всего набора в синхронном ответе привела бы к дублям, поэтому ответ пуст.
+      return List.of();
+    }
+
+    if (globalConfiguration.getWorkspaceSymbol().isSyncFuzzySearch()
+      && !queryString.isEmpty()) {
+      // Клиент без потоковой выдачи: блокирующий fuzzy-скан дописывается в синхронный ответ.
+      var tail = workspaceSymbolIndex.searchFuzzyTail(queryString, identitySetOf(fast), cancelChecker);
+      var result = new ArrayList<WorkspaceSymbol>(fast.size() + tail.size());
+      fast.forEach(entry -> result.add(createWorkspaceSymbol(entry)));
+      tail.forEach(entry -> result.add(createWorkspaceSymbol(entry)));
+      return result;
+    }
+
+    // syncFuzzySearch == false (по умолчанию): только древесная выдача, медленный fuzzy-скан не запускаем.
+    return fast.stream()
       .map(SymbolProvider::createWorkspaceSymbol)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   /**
-   * Компилирует запрос {@code workspace/symbol} в шаблон для сопоставления имён символов.
+   * Построить identity-множество записей для исключения из fuzzy-хвоста.
    * <p>
-   * Запрос трактуется как регулярное выражение. Если оно невалидно, спецификация LSP допускает
-   * "расслабленную" обработку, поэтому вместо возврата пустого результата выполняется откат на
-   * буквальное сопоставление подстроки.
+   * Сравнение по ссылке ({@link IdentityHashMap}) гарантирует, что из хвоста исключаются именно те
+   * записи, что уже попали в быструю выдачу, без зависимости от {@code equals}/{@code hashCode}.
    *
-   * @param queryString строка запроса пользователя
-   * @return скомпилированный шаблон с флагами {@code CASE_INSENSITIVE} и {@code UNICODE_CASE}
+   * @param entries записи быстрой древесной выдачи
+   * @return identity-множество переданных записей
    */
-  private static Pattern compilePattern(String queryString) {
-    try {
-      return CaseInsensitivePattern.compile(queryString);
-    } catch (PatternSyntaxException e) {
-      LOGGER.debug(e.getMessage(), e);
-      return CaseInsensitivePattern.compile(Pattern.quote(queryString));
+  private static Set<Entry> identitySetOf(List<Entry> entries) {
+    Set<Entry> set = Collections.newSetFromMap(new IdentityHashMap<>());
+    set.addAll(entries);
+    return set;
+  }
+
+  /**
+   * Досылает записи клиенту чанками {@code $/progress}, маппя каждую запись в {@link WorkspaceSymbol}.
+   * <p>
+   * Записи нарезаются на чанки по {@link #STREAM_BATCH_SIZE} в исходном порядке, чтобы не забивать
+   * канал связи одним крупным уведомлением. Перед отправкой каждого чанка проверяется отмена запроса
+   * ({@link CancelChecker#checkCanceled()}); при отмене бросается
+   * {@link java.util.concurrent.CancellationException}. Используется для обоих наборов — быстрой
+   * древесной выдачи и fuzzy-хвоста.
+   *
+   * @param token         токен частичного результата из параметров запроса
+   * @param entries       записи индекса для потоковой выдачи
+   * @param cancelChecker проверяющий отмену запроса между чанками
+   */
+  private void streamInBatches(Either<String, Integer> token, List<Entry> entries, CancelChecker cancelChecker) {
+    for (var from = 0; from < entries.size(); from += STREAM_BATCH_SIZE) {
+      cancelChecker.checkCanceled();
+      var batch = entries.subList(from, Math.min(from + STREAM_BATCH_SIZE, entries.size())).stream()
+        .map(SymbolProvider::createWorkspaceSymbol)
+        .toList();
+      streamChunk(token, batch);
     }
   }
 
-  private static Stream<SymbolEntry> getSymbolEntries(DocumentContext documentContext) {
-    var scriptVariant = scriptVariantOf(documentContext);
-    return documentContext.getSymbolTree().getChildrenFlat().stream()
-      .filter(SymbolProvider::isSupported)
-      .map(symbol -> new SymbolEntry(documentContext.getUri(), symbol, scriptVariant));
+  /**
+   * Отправить чанк символов клиенту как частичный результат через {@code $/progress}.
+   * <p>
+   * Пустые чанки пропускаются. Значением прогресса служит список символов
+   * ({@code Either.forRight(chunk)}); уведомление уходит только подключённому клиенту.
+   *
+   * @param token токен частичного результата из параметров запроса
+   * @param chunk чанк символов рабочей области для отправки
+   */
+  private void streamChunk(Either<String, Integer> token, List<? extends WorkspaceSymbol> chunk) {
+    if (chunk.isEmpty()) {
+      return;
+    }
+    var progressParams = new ProgressParams(token, Either.forRight((Object) chunk));
+    clientHolder.execIfConnected(languageClient -> languageClient.notifyProgress(progressParams));
   }
 
-  private static boolean isSupported(Symbol symbol) {
-    var symbolKind = symbol.getSymbolKind();
-    return switch (symbolKind) {
-      case Method, Constructor -> true;
-      case Variable -> SUPPORTED_VARIABLE_KINDS.contains(((VariableSymbol) symbol).getKind());
-      default -> false;
-    };
-  }
-
-  private static WorkspaceSymbol createWorkspaceSymbol(SymbolEntry symbolEntry) {
-    var uri = symbolEntry.uri();
-    var symbol = symbolEntry.symbol();
-    var location = new Location(uri.toString(), symbol.getRange());
+  /**
+   * Строит {@link WorkspaceSymbol} из записи индекса.
+   * <p>
+   * Имя контейнера и теги уже вычислены на момент индексации, поэтому повторный обход дерева
+   * символов не требуется. Пустое имя контейнера трактуется как «контейнер отсутствует».
+   *
+   * @param entry запись индекса символов рабочей области
+   * @return заполненный символ рабочей области
+   */
+  private static WorkspaceSymbol createWorkspaceSymbol(Entry entry) {
+    var location = new Location(entry.uri().toString(), entry.range());
 
     var workspaceSymbol = new WorkspaceSymbol();
-    workspaceSymbol.setName(symbol.getName());
-    workspaceSymbol.setKind(symbol.getSymbolKind());
+    workspaceSymbol.setName(entry.name());
+    workspaceSymbol.setKind(entry.kind());
     workspaceSymbol.setLocation(Either.forLeft(location));
-    workspaceSymbol.setTags(symbol.getTags());
-    getContainerName(symbol, symbolEntry.scriptVariant()).ifPresent(workspaceSymbol::setContainerName);
+    workspaceSymbol.setTags(entry.tags());
+    if (!entry.containerName().isEmpty()) {
+      workspaceSymbol.setContainerName(entry.containerName());
+    }
 
     return workspaceSymbol;
-  }
-
-  /**
-   * Формирует человекочитаемое имя контейнера символа на основе связанного объекта метаданных.
-   * <p>
-   * Представление ссылки на объект метаданных (например, {@code ОбщийМодуль.ПервыйОбщийМодуль}
-   * или {@code CommonModule.ПервыйОбщийМодуль}) берётся в варианте встроенного языка проекта,
-   * что позволяет различать одноимённые символы из разных объектов конфигурации.
-   *
-   * @param symbol        Символ, для которого формируется имя контейнера
-   * @param scriptVariant Вариант встроенного языка проекта, в котором формируется представление ссылки
-   * @return Имя контейнера, либо {@link Optional#empty()}, если документ не связан с объектом метаданных
-   */
-  private static Optional<String> getContainerName(SourceDefinedSymbol symbol, ScriptVariant scriptVariant) {
-    return symbol.getOwner().getMdObject()
-      .map(MD::getMdoReference)
-      .map(mdoReference -> mdoReference.getMdoRef(scriptVariant));
-  }
-
-  /**
-   * Определяет вариант встроенного языка проекта для формирования представления ссылок.
-   *
-   * @param documentContext Контекст документа, для которого определяется вариант языка
-   * @return Вариант встроенного языка проекта
-   */
-  private static ScriptVariant scriptVariantOf(DocumentContext documentContext) {
-    var language = documentContext.getScriptVariantLanguage();
-    return language == Language.EN
-      ? ScriptVariant.ENGLISH
-      : ScriptVariant.RUSSIAN;
-  }
-
-  /**
-   * Символ рабочей области вместе с разрешёнными атрибутами документа-источника.
-   *
-   * @param uri           Идентификатор документа, в котором определён символ
-   * @param symbol        Символ исходного кода
-   * @param scriptVariant Вариант встроенного языка проекта документа-источника
-   */
-  private record SymbolEntry(URI uri, SourceDefinedSymbol symbol, ScriptVariant scriptVariant) {
   }
 }
